--- a/shopwala.css
+++ b/shopwala.css
@@ -4,15 +4,14 @@
 *::after {
   box-sizing: border-box;
 }
-
-  body {
+  
+body {
   margin: 0;
   padding: 0;
-  width: 100%; 
+  width: 100%;
+  max-width: 100vw;
   font-family:Arial, sans-serif;
 }
-
-
 
 .navbar {
    left: 0;
@@ -27,8 +26,34 @@
       /*  Purple Color --> rgb(160, 21, 202);  */
    backdrop-filter: blur(10px);
    padding: 20px 20px;
-   gap: 12%;
+   gap: 7%;
    z-index: 10000;
+}
+
+.menu-bar, .menu-bar a{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-items: center;
+    gap: 25px;
+    color: rgb(255, 255, 255);
+    text-decoration: none;
+}
+
+.menu-item {
+  font-size: 16px;
+  padding: 6px;
+  cursor: pointer;
+  border-bottom: none;
+  background-image: linear-gradient(to right, #ffffff, #ffffff);
+  background-repeat: no-repeat;
+  background-position: left bottom;
+  background-size: 0% 3px;  
+  transition: background-size 0.3s ease;
+}
+
+.menu-item:hover {
+  background-size: 95% 3px; 
 }
 
 .logo {
@@ -47,7 +72,7 @@
 .search-bar{
   flex-grow: 1;
   max-width: 500px;
-  margin: 0px 30px;
+  margin: 0px;
   position: relative;
 }
 
@@ -67,23 +92,37 @@
   color: gray;
 }
 
+.nav-icons .nav-collapse-icon{
+      display: flex;
+      flex-direction: column;
+      gap: 6px;
+      display: none;
+}
+.nav-icons .nav-collapse-icon span{
+    width: 35px;
+    height: 6px;
+    background-color: white;
+}
+
 .nav-icons {
   display: flex;
-  gap: 25px ;
+  gap: 30px ;
   align-items: center;
+  margin-right: 3%;
 }
 
 .nav-icons div {
   display: flex;
+  flex-direction: column;
   align-items: center;
-  gap: 8px;
+  gap: 6px;
   cursor: pointer;
-  font-size: 16px;
+  font-size: 12px;
   color: white;
 }
 
 .nav-icons-circle i {  
-  font-size: 15px;
+  font-size: 18px;
   color: white;
 }
 
@@ -91,10 +130,14 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 28px;
-  height: 28px;
-  border: 2px solid white;
+  width: 35px;
+  height: 35px;
+  border: 1.55px solid white;
   border-radius: 50%;
+  transition: 0.4s ease;
+}
+.nav-icons-circle:hover{
+  background-color: rgb(195 0 255);
 }
 
 .account-section{
@@ -139,6 +182,7 @@
 
 
 .items {
+  position: relative;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -164,7 +208,7 @@
   border : 1px solid rgb(206, 47, 255);
   outline : 4px solid rgb(206, 47, 255);
   border-radius: 50%;
-  box-shadow: #333;
+  box-shadow: 0 0 15px rgba(206, 47, 255, 0.489);
 }
 
 
@@ -235,14 +279,55 @@
 }
 
 .footer{
-    margin-top: 100px;
-    background-color: rgb(244 8 226 / 63%);
+    position: relative;
+    max-width: 100%;
+    margin-top: 20px;
+    /* background-color: rgb(244 8 226 / 63%); */
+    /* background: radial-gradient(1200px 600px at 10% -10%, rgb(217 0 255 / 39%), #8484844d 60%), radial-gradient(1000px 500px at 90% -20%, rgb(255 0 178 / 51%), #ff00d32b 60%), #fff5f5; */
+
+    /* background: radial-gradient(1200px 600px at 10% -10%, rgb(217 0 255 / 33%), rgb(255 0 179 / 16%) 60%), radial-gradient(1000px 500px at 90% -10%, #ff21e97d, #ff000045 60%), #ffb3f94f; */  
+    background-color: rgba(244, 8, 224, 0.566);  
     backdrop-filter: blur(10px);
     padding: 60px 80px;
     display: flex;
     flex-direction: row;
     gap : 240px;
     align-items: flex-start;
+    z-index: 2;
+}
+
+
+
+.footer-circles{
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  gap:2%;
+}
+.footer-circle{
+      position: relative;
+      height: 100px;
+      width: 100px;
+      border-radius: 50%;
+      background-color: rgba(255, 0, 187, 0.664);
+      filter: blur(23px);
+      z-index: 1;   
+}
+
+.circle-1{
+   bottom: -360px;
+}
+.circle-2{
+  bottom: -270px;
+  height: 70px;
+  width: 70px;
+}
+.circle-3{
+   bottom: -160px;
+}
+
+.footer-block{
+    display: block;
 }
 
 
@@ -269,11 +354,21 @@
   padding-bottom : 6px;
   font-size: 13px;
   margin-left: 2px;
-  transition: 0.2s ease-in-out;
+  background-image: linear-gradient(to right,#ffff,#ffff);
+  background-position: left bottom;
+  background-repeat: no-repeat;
+  background-size: 0% 2px;
+  transition: 0.4s;
+  margin-bottom: 4px;
 }
+
+.footer-lists a{
+  text-decoration: none;
+}
+
 .products .footer-lists li:hover{
   cursor: pointer;
-   color: rgb(61, 12, 60);
+  background-size: 70% 2px;
 }
 
 .footer-titles{
@@ -308,7 +403,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: rgb(206, 47, 255);
+  background-color: rgb(195 0 255);
   transition: 0.2s ease;
 }
 
@@ -358,27 +453,18 @@
 
  }
 
+
+ /*   Phone     */
+
  @media (min-width : 350px) and (max-width : 767px){
 
-     .front-menu {
-      width: 100%;
-      margin: 160px auto;
-      column-gap: 50px;
-      row-gap: 70px;
-     }
+    .menu-bar{
+        display: none;
+   }
 
-     .offer-slider{
-      width: 100%;
-     }
- 
     .navbar{
-     padding: 30px 20px;
-     gap: 6%;
-    }
-
-    .item-image img {
-      height: 200px !important;
-      width: 200px !important;
+     padding: 50px 20px;
+     gap: 5%;
     }
 
     .nav-icons div{
@@ -386,6 +472,107 @@
     }
 
     .nav-icons{
-      gap:29px;
+      gap:20px;
     }
+
+    .nav-icons > div {
+      font-size: 0;
+    } 
+    .account-section > div {
+      font-size: 0;
+    } 
+
+    .nav-icons .nav-collapse-icon{
+      display: flex;
+    }
+
+    .item-label{
+      font-weight: 500;
+      font-size: 28px;
+    }
+    .items{
+      gap: 20px;
+    }
+
+    .item-image img {
+      height: 170px !important;
+      width: 170px !important;
+    }
+
+    .front-menu {
+      width: 100%;
+      margin: 230px 0 70px;
+      column-gap: 30px;
+      row-gap: 50px;
+      grid-template-columns: repeat(3, 1fr);
+      padding: 50px 25px;
+      overflow-x: hidden;
+     }
+
+     .item-appliances{
+          left: 66%;
+          transform: translateX(-10%);
+     }
+     .item-mobile{
+          left: 33%;
+          transform: translateX(25%);
+     }
+
+
+    .offer-slider{
+      width: 100%;
+      overflow-x: hidden;
+     }
+ 
+     .search-bar input{
+      padding: 24px 40px 24px 15px;
+      border-radius: 120px;
+      font-size: 30px;
+     }
+
+     
+     .nav-icons-circle i{
+      font-size: 45px;
+     }
+
+     .nav-icons-circle{
+      width: 80px;
+      height: 80px;
+      border: 3px solid white;
+     }
+
+     .logo{
+      font-size: 44px;
+     }
+
+     .search-bar i {
+      right: 6%;
+      font-size: 25px;
+     }
+
+    .offer-banners{
+     height: 450px;
+    }
+
+    .dots button{
+     height: 20px;
+     width: 20px;
+     margin-top: 20px;
+    }
+
+  .nav{
+    font-size: 3.5rem;
+    transform: translateY(-50%);
+  }
+
+  .footer{
+    width: 100%;
+    overflow-x: hidden;
+    padding: 50px 30px;
+    gap: 90px;
+  }
+
+  .logo-footer{
+    font-size: 30px;
+  }
  }
