--- a/pages/css/content.css
+++ b/pages/css/content.css
@@ -17,7 +17,6 @@
     width: 100%;
     text-align: center;
     font-weight: bold;
-    font-size: 1.5em;
     color: black;
     z-index: 1;
 }
@@ -85,6 +84,11 @@
     font-family: 'Montserrat', sans-serif;
     font-size: 14px;
     gap: 7px;
+}
+.mrp-sale-wrapper{
+    display: flex;
+    flex-direction: row;
+    gap: 3px;
 }
 
 .item-MRP{
@@ -253,13 +257,97 @@
      overflow-x: hidden;
 }
     .content{
-        grid-template-columns: 23% 77%;
-        margin-top: 230px;
+        grid-template-columns: 30% 70%;
         width: 100%;
         overflow-x: hidden;
     }
+    .content-right{
+        width: 100%;
+    }
+
+
+
+
+
+    /* remove non needed */
+
+
+.content-title h1{
+      font-size: 28px;
+      margin-top: 30px;
+}
+
+
+.item-card-top img{
+    width: 100%;
+    border-radius: 10px;
+    height: 250px;
+    object-fit: cover;
+    object-position: top;
+}
+
+.item-card-bottom{
+    margin-left: 9px;
+    margin-top: 15px;
+    display: flex;
+    flex-direction: column;
+    gap: 6px;
+}
+
+
+/* content-left */
+
+
+.filter-section{
+    height: 90%;
+    border-right: 1.5px solid #b3b3b37a;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    margin: 6%;
+    margin-top: 50px;
+    background-color: rgba(239, 238, 238, 0.13);
+
+}
+
+.filter-section h1{
+    font-size: 28px;
+    text-align: center;
+    padding-bottom: 20px;
+    margin-top: 40px;
+    border-bottom: 1.5px solid #b3b3b37a;
+    color: rgba(0, 0, 0, 0.790);
+}
+
+.filter-1 h2,.filter-2 h2,.filter-3 h2{
+    font-size: 20px;
+    margin-bottom: 20px;
+    color: rgba(0, 0, 0, 0.790);
+}
+.filter-1, .filter-2, .filter-3{
+     margin: 20px 0px;
+     margin-left:  15px;
+     border-bottom: 1.5px solid #b3b3b37a ;
+     padding-bottom: 50px;
+}
+
+.filter-apply, .filter-clear{
+    margin-top: 20px;
+    text-align: center;
+    width: 70px;
+    padding: 5px;
+    border: 2px solid rgba(0, 0, 0, 0.731);
+    border-radius: 20px;
+    cursor: pointer;
+}
+
+
+
+    /* remove non needed */
+    /* over */
 
     .content-items{
+    width: 100%;
     margin: 2%;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
@@ -269,23 +357,24 @@
     }
     
     .item-card {
-        width: 88%;
+        width: 100%;
         padding : 5px;
         padding-bottom: 20px;
     }
 
     .item-name{
-        font-size: 20px;
+        font-size: 14.5px;
     }
     .item-description{
-        font-size: 19px;
+        font-size: 13px;
     }
     .item-price{
-        font-size: 21px;
+        font-size: 15px;
         flex-direction: column;
+        gap: 2px;
     }
     .item-MRP, .item-sale{
-        font-size: 17.5px;
+        font-size: 12px;
     }
 
     .mrp-sale-wrapper{
@@ -295,23 +384,24 @@
     }
 
     .item-buttons {
-        gap: 10%;
+        gap: 6%;
+        margin-left: -10%;
     }
     .buy-button {
-    padding: 8px 13px;
-    font-size: 20px;
+    padding: 5px 10px;
+    font-size: 13px;
     }
     .wishlist-button {
-    font-size: 20px;
-    gap: 6px;
+    font-size: 13px;
+    gap: 4px;
     }
     .wishlist-button .nav-icons-circle {
-    width: 35px;
-    height: 35px;
+    width: 23px;
+    height: 23px;
     }
     .wishlist-button .nav-icons-circle i {
-    font-size: 20px;
-    padding: 10px;
+    font-size: 15px;
+    padding: 13px;
     }
 
 
